--- a/PI/app/templates/base.html
+++ b/PI/app/templates/base.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="icon" href="{{ url_for('static', filename='img/wallet.png') }}" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='img/Logo.png') }}" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.2/main.min.css">
 </head>
 <body>
     <div class="header">
         <h1>
-            <img src="/static/img/wallet.png" alt="Logo" width="64" height="51" />
+            <img src="/static/img/Logo.png" alt="Logo" height="51" />
             <strong>Meu Financeiro</strong>
         </h1>
         <div class="navigation">
