--- a/PI/app/templates/register.html
+++ b/PI/app/templates/register.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/styles.css">
-    <link rel="icon" href="{{ url_for('static', filename='img/wallet.png') }}" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='img/Logo.png') }}" type="image/png">
 </head>
 <body class="login-page">
     <div class="login-layout">
