--- a/PI/app/templates/base.html
+++ b/PI/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Meu Financeiro</title>
+    <title>FinGest - Sistema de Gestão Financeira</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="header">
         <h1>
             <img src="/static/img/Logo.png" alt="Logo" height="51" />
-            <strong>Meu Financeiro</strong>
+            <strong>FinGest</strong>
         </h1>
         <div class="navigation">
             <a href="{{ url_for('main.dashboard') }}" class="nav-link">Dashboard</a>
@@ -41,7 +41,7 @@
 
     {% block content %}{% endblock %}
     <footer class="login-footer">
-        <p>&copy; 2025 Meu Financeiro - Projeto Integrador</p>
+        <p>&copy; 2025 FinGest - Sistema de Gestão Financeira Pessoal</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.2/main.min.js"></script>
