--- a/PI/app/templates/calendar.html
+++ b/PI/app/templates/calendar.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="calendar-page">
         <div class="calendar-header">
-            <h1><span class="calendar-icon">📅</span> Calendário Financeiro</h1>
+            <h1><span class="calendar-icon">📅</span> Calendário FinGest</h1>
             <p>Visualize suas transações e eventos financeiros</p>
         </div>
         
