--- a/PI/app/templates/register.html
+++ b/PI/app/templates/register.html
@@ -20,7 +20,6 @@
         <!-- Coluna do formulário -->
         <div class="login-form-column">
             <div class="register-container">
-                <h2>Registro</h2>
                 <form action="{{ url_for('main.register') }}" method="post" autocomplete="on">
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
@@ -29,16 +28,11 @@
                             {% endfor %}
                         {% endif %}
                     {% endwith %}
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="fullname">Nome Completo:</label>
-                            <input type="text" id="fullname" name="fullname" required autocomplete="name">
-                        </div>
-                        <div class="form-group">
-                            <label for="username">Nome de Usuário:</label>
-                            <input type="text" id="username" name="username" required autocomplete="username">
-                        </div>
-                    </div>
+                    <label for="fullname">Nome Completo:</label>
+                    <input type="text" id="fullname" name="fullname" required autocomplete="name">
+                    
+                    <label for="username">Nome de Usuário:</label>
+                    <input type="text" id="username" name="username" required autocomplete="username">
                     
                     <label for="email">E-mail:</label>
                     <input type="email" id="email" name="email" required autocomplete="email">
@@ -64,7 +58,7 @@
     </div>
     
     <footer class="login-footer">
-        <p>&copy; 2025 Meu Financeiro - Projeto Integrador</p>
+        <p>&copy; 2025 FinGest - Sistema de Gestão Financeira Pessoal</p>
     </footer>
     
 </body>
